# treehacks2025

./: .gitignore
server/: Cargo.toml
server/notebooks/: perplexity_api.ipynb
