[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures = "0.3.30"
hyper = "1.4.1"
hyper-util = "0.1.7"
rand = "0.8.5"
reqwest = { version="0.12.5", features = ["json"] }
serde = { version="1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.1", features = ["full"] }